# imigrAI

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  cd.yml  ci.yml  production.yml  sonarcloud.yml
.opencode/: napkin.md
app/: cli.py  main.py
app/api/: health.py  router.py
app/core/: celery_app.py  http_security.py  log_context.py  metrics.py  observability.py  redis.py  (+4 more)
docs/: 01-visao-do-projeto.md  02-arquitetura-da-solucao.md  03-backend-fastapi-dominios.md  04-frontend-nextjs.md  05-modelo-de-dados-migracoes.md  06-regras-de-negocio.md  07-fluxos-e2e-e-contratos-api.md  08-operacao-deploy-observabilidade.md  09-testes-e-qualidade.md  README.md  mvp-country-catalog.md  release-checklist.md  rollback-strategy.md  testes-faculdade.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  middleware.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
imigrai_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: check_mvp_seed.py  deploy_webhook.py  ingestion_cli.py  run_migrations_safe.py  seed_initial_data.py  seed_mvp_catalog.py  seed_mvp_rules.py  smoke_test.py
tests/: conftest.py  test_async_tasks.py  test_auth.py  test_billing_freemium.py  test_health.py  test_ingestion_parsers.py  test_mvp_catalog_seed_data.py  test_openapi_contract.py  test_score_engine.py
(+143 files in other folders)
