[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imigrai-api"
version = "0.1.0"
description = "Backend bootstrap for imigrai SaaS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "celery[redis]>=5.4.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "openai>=1.51.0",
  "psycopg[binary]>=3.2.1",
  "pwdlib[argon2]>=0.3.0",
  "pydantic-settings>=2.4.0",
  "python-json-logger>=2.0.7",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.0.7",
  "sqlalchemy[asyncio]>=2.0.34",
  "stripe>=11.6.0",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "black>=24.8.0",
  "httpx>=0.27.2",
  "pre-commit>=3.8.0",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.4",
]

[tool.setuptools.packages.find]
include = ["app*", "apps*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
